    input plugin (new), it reads packets from the command output. When used as
    a packet processor plugin, it writes packets to the command input.
  * Added option --ignore-errors to "tsbitrate" and plugin "pcrbitrate".
  * Added option --receive-timeout to "tstabdump" and plugins "dektec" (input),
    "ip" (input), "mpeinject".

-------------------------------------------------------------------------------

VERSION 3.14-894

[NEW] New commands and plugins:

  * Added plugin "sections".
  * Optional rebuild without teletext support (without plugin "teletext").

[IMP] Improvements on existing commands and plugins:

  * Added option --remove-stream-type to plugin "pmt".
  * Added options --network-name, --network-id and --nit-other to plugin "nit".
  * Added option --provider to plugin "svrename".
  * Added options --include-next and --exclude-current to commands "tstables"
    and "tspsi" and to plugins "tables" and "psi".
  * Added options --rewrite-binary and --rewrite-xml to command "tstables" and
    plugin "tables".
  * Added keywork "system" to option --start in plugin "timeref".
  * Added option --transparent to plugin "merge".
  * Added options --other, --ts-id, --original-network-id to plugin "sdt".
  * Added options --create, --create-after, --bitrate, --inter-packet to
    plugins "pat", "pmt", "bat", "sdt", "nit".
  * Added option --wide-display to command "tsanalyze" and plugin "analyze".
  * Added option --min-interval to command "tsstuff".
  * Added option --scte35 to plugin "pcrextract".
  * In plugin "inject", when all input files have specific repetition rates,
    it is no longer required to provide a bitrate for the PID. It is computed
    from the size and repetition rate of all sections.
  * Some performance improvement by removing processing which are used in debug
    or verbose mode only (options --debug and --verbose).

[BUG] Bug fixes:

  * In plugin "merge", merging CAT's from two streams was incorrect