@@ -17,6 +17,7 @@ VERSION 3.15-924
   * Added option --ignore-errors to "tsbitrate" and plugin "pcrbitrate".
   * Added option --receive-timeout to "tstabdump" and plugins "dektec" (input),
     "ip" (input), "mpeinject".
+  * The command "tsdump" can now accept multiple input files.
 
 -------------------------------------------------------------------------------
 
